--- a/style.css
+++ b/style.css
@@ -151,22 +151,42 @@ h1, h2, h3, h4, h5, h6 {font-family: 'Montserrat', sans-serif !important;}
 	color: #FFFFFF;
 }
 
-/*	Page Heading  
+/*	Main Heading  
 ==================================================================================== */
-.page-heading {
-    margin-bottom: 1.875rem;
-    padding-top: 2.875rem;
+.main-heading {
+	margin-bottom: 2.875rem;
+	padding-top: 10.875rem;
+	padding-bottom: 1.875rem;
+	background-size: cover !important;
 }
-	.page-heading__title {
-		font-size: 1.5rem;
-		color: #3F5E94;
-		font-weight: bold;
-		line-height: 1;
-		text-transform: uppercase;
-		margin: 0;
+.main-heading--no-margin {
+	margin-bottom: 0;
+}
+	/*	Content  */
+	.main-heading__content {
+		margin-bottom: 0.9375rem;
 	}
+	.main-heading__content--right {
+		padding-top: 3.65rem;
+	}
+		.main-heading__content-title {
+			font-size: 2.25rem;
+			color: #FFFFFF;
+			font-weight: bold;
+			text-transform: uppercase;
+			text-shadow: 1px 1px 3px rgba(0,0,0,.25);
+		}
+		.main-heading__content-text {
+			color: #FFFFFF;
+			font-weight: 600;
+			padding-left: 2px;
+		}
 
-
+/*	Main Heading | Media Queries  */
+/*	Medium and up  */
+@media screen and (min-width: 40em) {
+	.main-heading {height: 360px; padding-bottom: 0;}
+}
 /* ====================================================================================
 	HEADER  
 ==================================================================================== */
@@ -1063,18 +1083,22 @@ footer {
 
 /*	Banners  
 ==================================================================================== */
-.banners-block {
-	margin-bottom: 1.875rem;
+.banners-container {
+	padding-top: 3.875rem;
+	padding-bottom: 1.875rem;
 }
-	.banners-block__wrapper {
-		background: #202D46;
+	.banners-block {
+		margin-bottom: 1.875rem;
 	}
-	.banners-block--left .banners-block__wrapper {
-		background: #092450;
-	}
-	.banners-block--right .banners-block__wrapper {
-		background: #4A5E81;
-	}
+		.banners-block__wrapper {
+			background: #202D46;
+		}
+		.banners-block--left .banners-block__wrapper {
+			background: #092450;
+		}
+		.banners-block--right .banners-block__wrapper {
+			background: #4A5E81;
+		}
 
 /*	Banners Block Content  */
 .banners-block__content {
@@ -1108,6 +1132,11 @@ footer {
 		margin-bottom: 0.75rem;
 	}
 
+/*	Banners Block | Media Queries  */
+/*	Medium and up  */
+@media screen and (min-width: 40em) {
+	.banners-block__content {padding-bottom: 0;}
+}
 /*	Benefits  
 ==================================================================================== */
 #benefits {
@@ -1314,6 +1343,47 @@ footer {
 		color: #2B3549;
 		margin-bottom: 0;
 	}
+
+
+
+/*	Shortcuts  
+==================================================================================== */
+#shortcuts {
+	padding-bottom: 0.9375rem;
+}
+
+/*	Shortcuts Block  */
+.shortcuts-block {
+    margin-bottom: 1.875rem;
+}
+	.shortcuts-block__anchor {
+		text-align: center;
+		padding: 1.875rem 1.875rem 0.9375rem;
+		display: block;
+		border: 1px solid #3F5E94;
+		-webkit-box-shadow: 0 0 20px transparent;
+		-moz-box-shadow: 0 0 20px transparent;
+		box-shadow: 0 0 20px transparent;
+	}
+	.shortcuts-block__anchor:hover, 
+	.shortcuts-block__anchor:focus {
+		-webkit-box-shadow: 0 0 20px rgba(0,0,0,.1);
+		-moz-box-shadow: 0 0 20px rgba(0,0,0,.1);
+		box-shadow: 0 0 20px rgba(0,0,0,.1);
+	}
+		.shortcuts-block__icon {
+			margin-bottom: 0.9375rem;
+		}
+		.shortcuts-block__title {
+			font-size: 1.25rem;
+			color: #092450;
+			font-weight: bold;
+			text-transform: uppercase;
+		}
+		.shortcuts-block__text {
+			font-size: 0.825rem;
+			color: #092450;
+		}
 
 
 /*	Career Heading  
@@ -1696,6 +1766,397 @@ footer {
 					margin: 0;
 					padding: 0 0.9375rem;
 				}
+
+
+/* ====================================================================================
+	UNIVERSITY PAGES CSS
+==================================================================================== */
+#university-heading {
+	padding-top: 6.875rem;
+}
+#university-about {
+	padding-bottom: 2.875rem;
+}
+#authorities-list {
+	padding-top: 3.875rem;
+    padding-bottom: 0.9375rem;
+    border-bottom: 1px solid rgba(32, 45, 70, .1);
+}
+#accredited-courses .cards-container {
+	padding-top: 0.9375rem;
+	background: #FFFFFF;
+}
+
+
+
+/*	Page Heading  
+==================================================================================== */
+.page-heading {
+    margin-bottom: 1.875rem;
+    padding-top: 2.875rem;
+}
+	.page-heading__title {
+		font-size: 1.5rem;
+		color: #3F5E94;
+		font-weight: bold;
+		line-height: 1;
+		text-transform: uppercase;
+		margin: 0;
+	}
+	.page-heading__title--larger {
+		font-size: 1.75rem;
+		color: #202D46;
+	}
+	.page-heading__title--lowercase {
+		text-transform: inherit;
+	}
+		.main-heading__content-subtitle {
+			font-size: 1.25rem;
+			color: #FFFFFF;
+			line-height: 1.25;
+			text-transform: initial;
+			display: block;
+		}
+	.page-heading__text {
+		color: rgba(43, 53, 73, .75);
+		margin-top: 0.9375rem;
+		margin-bottom: 0;
+	}
+
+/*	Page Heading | Media Queries  */
+/*	Medium and up  */
+@media screen and (min-width: 40em) {
+	.page-heading__text {width: 75%; margin: 0.9375rem auto 0;}
+}
+
+/*	Page Intro  
+==================================================================================== */
+.page-intro {
+	padding-bottom: 2.875rem;
+	border-bottom: 1px solid rgba(32, 45, 70, .1);
+}
+	.page-intro__divider {
+		width: 1px;
+		height: 100%;
+		margin: 0 auto;
+		display: block;
+		background: rgba(32, 45, 70, .1);
+	}
+
+/*	Page Intro Avatar  */
+.page-intro__avatar {
+	margin-bottom: 1.875rem;
+}
+	.page-intro__avatar-image {
+		margin-bottom: 0.9375rem;
+	}
+	.page-intro__avatar-title {
+		font-size: 1.25rem;
+		color: #2B3549;
+		margin: 0;
+	}
+		.page-intro__avatar-subtitle {
+			font-size: 0.9375rem;
+			color: rgba(43, 53, 73, .5);
+			font-weight: 600;
+			font-style: italic;
+			line-height: 1.25;
+			display: block;
+		}
+
+/*	Page Intro Content  */
+.page-intro__content {
+	font-size: 0.9375rem;
+	color: #2B3549;
+}
+	.page-intro__content-wrapper {
+		height: 100%;
+		padding-top: 0.9375rem;
+		border: 1px solid rgba(32, 45, 70, .1);
+		background: rgba(32, 45, 70, .05);
+	}
+		.page-intro__content-title {
+			font-size: 1.5rem;
+			color: rgba(43, 53, 73, .75);
+			font-weight: 600;
+			margin: 0 0 0.9375rem;
+		}
+
+/*	Person Block  
+==================================================================================== */
+.person-block {
+    margin-bottom: 1.875rem;
+}
+	.person-block__heading {
+		margin-bottom: 0.9375rem;
+	}
+	.person-block__info-name {
+		/*font-size: 1.1rem;*/
+		font-size: 0.9375rem;
+		color: #202D46;
+		font-weight: bold;
+		margin-bottom: 0.25rem;
+	}
+	.person-block__info-text {
+		/*font-size: 0.9375rem;*/
+		font-size: 0.875rem;
+		color: rgba(32, 45, 70, .75);
+		line-height: 1.35;
+		margin-bottom: 0.25rem;
+	}
+	.person-block__info-email {
+		font-size: 0.875rem;
+		color: rgba(32, 45, 70, .5);
+		font-weight: 600;
+		font-style: italic;
+	}
+
+/*	Cards  
+==================================================================================== */
+.cards-container {
+    padding-top: 2.875rem;
+    padding-bottom: 0.9375rem;
+    border-bottom: 1px solid rgba(32, 45, 70, .1);
+    background: rgba(32, 45, 70, .05);
+}
+	.card-block {
+		margin-bottom: 1.875rem;
+	}
+		.card-block__anchor, 
+		.card-block__wrapper {
+			text-align: center;
+			padding-bottom: 0.9375rem;
+			display: block;
+			/*border: 1px solid rgba(32, 45, 70, .1);*/
+			-webkit-box-shadow: 0 0 20px transparent;
+			-moz-box-shadow: 0 0 20px transparent;
+			box-shadow: 0 0 20px transparent;
+			background: #FFFFFF;
+		}
+		.card-block__anchor--equal, 
+		.card-block__wrapper--equal {
+			min-height: 200px;
+		}
+		.card-block__anchor--bordered, 
+		.card-block__wrapper--bordered {
+			border: 1px solid rgba(32, 45, 70, .1);
+		}
+		.card-block__anchor:hover, 
+		.card-block__anchor:focus {
+			-webkit-box-shadow: 0 0 20px rgba(32, 45, 70, .15);
+			-moz-box-shadow: 0 0 20px rgba(32, 45, 70, .15);
+			box-shadow: 0 0 20px rgba(32, 45, 70, .15);
+		}
+			.card-block__image {
+				margin-bottom: 0.9375rem;
+				display: block;
+			}
+			.card-block__title {
+				font-size: 0.8275rem;
+				color: #202D46;
+				font-weight: normal;
+				line-height: 1.25;
+				margin: 0;
+				padding: 0 0.9375rem;
+			}
+
+/*	FAQ  
+==================================================================================== */
+.faq-block {
+	margin-bottom: 1.875rem;
+}
+	.faq-block__title {
+		font-size: 1.1rem;
+		color: rgba(43, 53, 73, 0.85);
+		font-weight: 600;
+		margin-bottom: 0.9375rem;
+	}
+	.faq-block__text {
+		font-size: 0.9375rem;
+		color: rgba(43, 53, 73, .75);
+	}
+
+/*	About Tabs  
+==================================================================================== */
+/*	Tabs  */
+#about-tabs {
+	border-width: 1px 1px 0 1px;
+	border-color: #F3F4F5;
+}
+	#about-tabs .tabs-title {
+		border-bottom: 1px solid #F3F4F5;
+	}
+		#about-tabs .tabs-title a {
+			font-size: 0.875rem;
+			color: rgba(32, 45, 70, .5);
+			font-weight: bold;
+			text-transform: uppercase;
+			position: relative;
+			background: #FFFFFF;
+		}
+		#about-tabs .tabs-title a:hover {
+			color: #202D46;
+		}
+		#about-tabs .tabs-title.is-active a, 
+		#about-tabs .tabs-title.is-active a:hover, 
+		#about-tabs .tabs-title.is-active a:focus {
+			color: #202D46;
+			background: #F3F4F5;
+		}
+			#about-tabs .tabs-title a .fa-angle-right {
+				position: absolute;
+				top: 1.25rem;
+				right: 0.5rem;
+				-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+				filter: alpha(opacity=0);
+				-moz-opacity: 0;
+				-khtml-opacity: 0;
+				opacity: 0;
+			}
+			#about-tabs .tabs-title a:hover .fa-angle-right, 
+			#about-tabs .tabs-title.is-active a .fa-angle-right {
+				-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+				filter: alpha(opacity=100);
+				-moz-opacity: 1;
+				-khtml-opacity: 1;
+				opacity: 1;
+			}
+#about-tabs + .tabs-external {
+    font-size: 0.875rem;
+    color: rgba(32, 45, 70, .5);
+    font-weight: bold;
+    line-height: 1;
+    text-transform: uppercase;
+    margin-bottom: 1.875rem;
+    padding: 1.25rem 1.5rem;
+    display: block;
+    border-width: 0 1px 1px;
+    border-style: solid;
+    border-color: #F3F4F5;
+    background: #FFFFFF;
+}
+#about-tabs + .tabs-external:hover, 
+#about-tabs + .tabs-external:focus {
+	color: #202D46;
+}
+
+/*	About Tabs Content  */
+#about-tabs-content {
+	border: none;
+}
+	#about-tabs-content .tabs-panel {
+		padding: 0 0.9375rem;
+	}
+		#about-tabs-content .tabs-panel__title {
+			font-size: 1.75rem;
+			color: #202D46;
+			font-weight: bold;
+			text-transform: uppercase;
+			margin: 0 0 0.9375rem;
+		}
+		#about-tabs-content .tabs-panel__content {
+			font-size: 0.9375rem;
+			color: #202D46;
+		}
+
+/*	Categories  
+==================================================================================== */
+#categories {
+	margin-bottom: 1.875rem;
+}
+
+/*	Categories Tabs  */
+#categories-tabs {
+    /*border-width: 1px 0 0 1px;
+    border-color: #202D46;*/
+    border: none !important;
+}
+	#categories-tabs .tabs-title {
+		display: block;
+	}
+	#categories-tabs.tabs--by-3 .tabs-title {width: 33.3333%;}
+	#categories-tabs.tabs--by-4 .tabs-title {width: 25%;}
+	#categories-tabs.tabs--by-5 .tabs-title {width: 20%;}
+	#categories-tabs.tabs--by-6 .tabs-title {width: 16.6667%;}
+	#categories-tabs.tabs--by-7 .tabs-title {width: 14.2857%;}
+	#categories-tabs.tabs--by-8 .tabs-title {width: 12.5%;}
+		#categories-tabs .tabs-title a {
+			font-family: "Montserrat", sans-serif !important;
+			font-size: 1rem;
+			color: #202D46;
+			font-weight: bold;
+			text-align: center;
+			max-height: 57px;
+			padding: 1.25rem 0;
+			border-top: 1px solid #202D46;
+			border-right: 1px solid #202D46;
+			border-bottom: 1px solid #202D46;
+			background: #FFFFFF;
+		}
+		#categories-tabs .tabs-title:first-child a {
+			border-left: 1px solid #202D46;
+		}
+		#categories-tabs .tabs-title a:hover {
+			background: #F3F4F5;
+		}
+		#categories-tabs .tabs-title.is-active a {
+			color: #FFFFFF;
+			max-height: 64px;
+			margin-top: -7px;
+			border-top-width: 8px;
+			background: #202D46;
+		}
+
+/*	Categories Content  */
+#categories-content {
+	border: none;
+	background: #FFFFFF;
+}
+	#categories-content .tabs-panel {
+		padding: 0;
+		position: relative;
+	}
+		#categories-content .tabs-panel__block {
+			width: inherit;
+			position: absolute;
+			left: 0.9375rem;
+			bottom: 1.875rem;
+		}
+			#categories-content .tabs-panel__block-wrapper {
+				padding: 1.25rem 1.25rem 0.9375rem;
+				background: rgba(255,255,255,.75);
+			}
+				#categories-content .tabs-panel__block-title {
+					font-size: 2.25rem;
+					color: #202D46;
+					font-weight: bold;
+					line-height: 1;
+					text-transform: uppercase;
+					margin-bottom: 1.5rem;
+					margin-left: -3px;
+				}
+					#categories-content .tabs-panel__block-subtitle {
+						font-size: 1.25rem;
+						color: #202D46;
+						font-weight: 400;
+						line-height: 1;
+						display: block;
+					}
+				#categories-content .tabs-panel__block-text {
+					font-size: 0.9375rem;
+					color: #202D46;
+					margin-bottom: 1.875rem;
+				}
+
+/*	Categories | Media Queries  */
+/*	Large and up  */
+@media screen and (min-width: 64em) {
+	#categories-content .tabs-panel__block {
+		width: 50%;
+		right: 0;
+	}
+}
+
 
 
 
